--- a/public/assets/css/daylist.css
+++ b/public/assets/css/daylist.css
@@ -8,13 +8,22 @@
     display: flex;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.day-container::-webkit-scrollbar {
+    display: none;
+}
+
 .day-container {
+    overflow-y: scroll;
     scroll-snap-align: center;
     display: flex;
     margin: 20px;
     min-width: 400px;
     flex-direction: column;
     gap: 10px;
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .day-title {
@@ -41,9 +50,8 @@
 }
 
 .episode-image {
-    width: 50px;
-    height: 50px;
-    background-color: #D3D3D3;
+    width: auto;
+    height: 100px;
     border-radius: 5px;
     margin-right: 10px;
 }
